<resources>
    <string name="app_name">Who\'s that pokemon</string>
    <string name="signin">Se connecter</string>
    <string name="signup">S\'inscrire</string>
    <string name="mail"> E-mail </string>
    <string name="password">Mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="training">Entrainement</string>
    <string name="competition">Competition</string>
    <string name="results">Resultats</string>
    <string name="first_page">First page</string>
    <string name="second_page">Second page</string>
    <string name="third_page">Third page</string>
    <string name="fourth_page">Fourth page</string>
</resources>